添加了滚动箭头效果

--- a/steptu/Web/Tpl/index/Public/css/index.css
+++ b/steptu/Web/Tpl/index/Public/css/index.css
@@ -309,3 +309,21 @@ position: absolute;
 	top: 875px;
 	height: 33px;
 }
+/*.youhuitiao1
+{
+  position: absolute;
+  left: 0px
+  top:20px;
+}
+.youhuitiao2
+{
+	position: absolute;
+  left: 0px
+  top:20px;
+}
+.youhuitiao3
+{
+	position: absolute;
+  left: 50px
+  top:0px;
+}*/
