--- a/steptu/Web/Tpl/index/Public/css/register.css
+++ b/steptu/Web/Tpl/index/Public/css/register.css
@@ -13,28 +13,6 @@ body{
 .mainbox{
     background-color: white;
     width: 100%;
-    height: 450px;
+    height: 480px;
+    /*opacity: 0.8;*/
 }
-/*#coverpage{*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-    /*z-index: 9999;*/
-    /*background: white;*/
-    /*overflow: hidden;*/
-    /*position: absolute;*/
-    /*/!*opacity: 0;*!/*/
-/*}*/
-/*#onepics{*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-    /*overflow: hidden;*/
-    /*position: relative;*/
-/*}*/
-/*.onepic_wrap{*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-    /*overflow: hidden;*/
-    /*display: block;*/
-    /*position: relative;*/
-    /*cursor: pointer;*/
-/*}*/
