--- a/steptu/Web/Tpl/index/Public/css/register.css
+++ b/steptu/Web/Tpl/index/Public/css/register.css
@@ -16,3 +16,44 @@ body{
     height: 480px;
     /*opacity: 0.8;*/
 }
+.infoBox{
+    font-size: 15px;
+    margin-top: 10%;
+    margin-left: 10%;
+    float: left;
+}
+.infoBox input{
+    height: 40px;
+    width: 80px;
+    font-size: 20px;
+}
+.infoBox span{
+    font-size: 20px;
+    font-weight: bolder;
+}
+.infoBox button{
+    margin-left: 34%;
+    margin-top: 8%;
+}
+.tips{
+    background-color: rgba(158, 167, 169, 0.25);
+    font-size: 15px;
+    padding: 10px 10px;
+}
+.tipsBox{
+    float: left;
+    margin-top: 10%;
+    margin-left: 10%;
+    border: 1px solid #4a87ff;
+}
+.tips a{
+    font-size: 15px;
+}
+.tips button{
+    /*background-image: url("../images/register/button.png");*/
+    height: 30px;
+    width: 85px;
+    background-color: #5fd6ff;
+    color: white;
+    font-size: 15px;
+}
